samples/_failures_safe/1761602832_d1edf0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_19c5a03b.c: In function ‘tokenize’:
./samples/SAFE/__tmp_19c5a03b.c:170:9: error: expected expression at end of input
  170 |         tokens[
      |         ^~~~~~
./samples/SAFE/__tmp_19c5a03b.c:170:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_19c5a03b.c:170:9: error: expected declaration or statement at end of input
